src/ty/snapshots/tvm__ty__tests__bad_assign_to_fn_or_cons.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        fn function() {}\n        type Constructor;\n\n        function = true;\n        Constructor = true;\n    \"#)"
---
error: invalid assignment target
4 |  function = true;
  |  ^^^^^^^^

error: invalid assignment target
5 |  Constructor = true;
  |  ^^^^^^^^^^^


